# itx

./: .gitignore  Cargo.toml  notes.txt  simplifications.txt
hub/: Cargo.toml
hub/examples/: smoke_agent.rs
hub/src/: auth.rs  board.rs  handlers.rs  main.rs  node_client.rs  store.rs
lib/: Cargo.toml
lib/src/: crypto.rs  error.rs  handler.rs  lib.rs  network.rs  payment.rs  sha256.rs  store.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml  alice.priv.cbor  alice.pub.pem
miner/src/: main.rs
node/: Cargo.toml
node/src/: ban.rs  handler.rs  main.rs  time_sync.rs  util.rs
wallet/: Cargo.toml
wallet/src/: core.rs  main.rs  tasks.rs  ui.rs  util.rs
