[package]
name = "itx-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "itx_lib"
path = "src/lib.rs"

[dependencies]
bigdecimal.workspace = true
chrono = { version = "0.4.45", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.3", features = ["serde", "pem"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
sha256 = "1.6.0"
thiserror = "1.0"
uint = "0.10.0"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
